--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         // Кодирование в Base64
         imageBase64 = canvas.toDataURL("image.jpg");
-        var output=data.replace(/^data:image\/(png|jpg);base64,/, "");
+        //var output = data.replace(/^data:image\/(png|jpg);base64,/, "");
 
         var messageOutputTest = document.getElementById("message-output");
         messageOutputTest.innerHTML = "imageBase64: " + imageBase64;
